syntax = "proto3";

option csharp_namespace = "IdeaStatiCa.CheckbotPlugin.Protos";

package ideastatica.checkbotplugin.v1;

import "country_code.proto";

service ProjectService {
    rpc GetInfo(ProjectInfoReq) returns (ProjectInfoResp);

    rpc GetModel(GetModelReq) returns (stream GetModelResp);

    rpc ListObjects(ListObjectsReq) returns (ListObjectsRes);
    rpc GetObjects(GetObjectsReq) returns (stream GetObjectsResp);
}

message ProjectInfoReq { }

message ProjectInfoResp {
    string name = 1;
	CountryCode country_code = 2;
    CountryCodeConfig country_code_config = 3;
}


message GetModelReq { 
    ModelExportOptions options = 1;
}

message GetModelResp { 
    ModelPacket packet = 1;
}


message ListObjectsReq { }

message ListObjectsRes {
    repeated ModelObject objects = 1;
}


message GetObjectsReq {
    ModelExportOptions options = 1;
    repeated ModelObject objects = 2;
}

message GetObjectsResp {
    ModelPacket packet = 1;
}


enum ModelObjectType {
    CONNECTION_POINT = 0;
    SUBSTRUCTURE = 1;
    MEMBER = 2;
    NODE = 3;
    CROSS_SECTION = 4;
    MATERIAL = 5;
}

message ModelObject {
    ModelObjectType type = 1;
    int32 id = 2;
}

message ModelPacket {
    bytes data = 1;
}

message ModelExportOptions {
    bool with_results = 1;
    bool all_cross_sections_as_general = 2;
}